# telda

./: .gitignore  Cargo.toml  README.md  install_binfmt.sh  instructions.txt  registers.txt  virtual_kernel.md
src/: aalv.rs  cpu.rs  disassemble.rs  ext_files.rs  is.rs  isa.rs  lazy16.rs  lib.rs  main.rs  mem.rs  monitor.rs  source.rs  standard16.rs  standard8.rs  tc.rs  teldasm.rs  u4.rs  wrappers.rs
src/aalv/: mod.rs  obj.rs  savn.rs
src/blf4/: mod.rs  register_type.rs  std_kernel.rs
src/blf4/isa/: handlers.rs  mod.rs
src/blf4/std_kernel/: load_user_binary.rs
src/cpu/: mod.rs  register_type.rs
src/isa/: handlers.rs  mod.rs
src/machine/: ekernel.rs  mod.rs
src/monitor/: cables.rs  card.rs  winit_app.rs
src/source/: err.rs  mod.rs  symbols.rs
src/standard16/: instruction_handler.rs
src/tc/: code.rs
