[package]
name = "telda"
version = "0.3.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ops = []
print_instruction = []

[dependencies]
nom = "6"
byteorder = "1.3.2"
arr_macro = "0.1"