[package]
name = "telda2"
version = "0.4.1"
edition = "2021"
default-run = "t"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tw"
required-features = ["monitor"]
[[bin]]
name = "t"
[[bin]]
name = "tar"
[[bin]]
name = "tc"
[[bin]]
name = "tdbg"
[[bin]]
name = "tl"
[[bin]]
name = "tobjdump"
[[bin]]
name = "tstrip"

required-features = ["monitor"]

[features]
monitor = ["winit", "softbuffer"]
default = ["monitor"]

[dependencies]
clap = { version = "4", features = ["derive"] }
collect_result = "0.1"
rand = "0.8"
softbuffer = { version = "0.4", optional = true }
winit = { version = "0.30.0", optional = true }

[profile.dev.package."*"]
opt-level = 2
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
